--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -32,9 +32,9 @@ jobs:
         # dependencies-strategy -> The strategy that `uv lock` should use to select
         # between the different compatible versions for a given package requirement
         # [arg: --resolution, env: UV_RESOLUTION=]
-        dependencies-strategy: ["lowest-direct", "highest"]
-        gt4py-module: ["cartesian", "eve", "next", "storage"]
-        os: ["ubuntu-latest", "macos-latest"]
+        dependencies-strategy: ["highest"]
+        gt4py-module: ["cartesian"]
+        os: ["macos-latest"]
         python-version: ${{ fromJSON(needs.get-python-versions.outputs.python-versions) }}
       fail-fast: false
 
