--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ requires = ['cython>=3.0.0', 'setuptools>=77.0.3', 'versioningit>=3.1.1', 'wheel
 [dependency-groups]
 build = ['cython>=3.0.0', 'pip>=22.1.1', 'setuptools>=77.0.3', 'wheel>=0.33.6']
 dace-cartesian = [
-  'dace>=1.0.2,<2'  # refined in [tool.uv.sources]
+  'dace>=1.0.2,<2'  # renfined in [tool.uv.sources]
 ]
 dace-next = [
   'dace>=1.0.0'  # refined in [tool.uv.sources]
@@ -132,7 +132,7 @@ readme = 'README.md'
 requires-python = '>=3.10, <3.14'
 
 [project.optional-dependencies]
-cartesian = ['gt4py[jax,standard,testing]', 'numpy<2']
+cartesian = ['gt4py[jax,standard,testing]']
 cuda11 = ['cupy-cuda11x>=12.0']
 cuda12 = ['cupy-cuda12x>=12.0']
 jax = ['jax>=0.4.26']
