--- a/pyproject.toml
+++ b/pyproject.toml
@@ -302,6 +302,8 @@ markers = [
   'checks_specific_error: tests that rely on the backend to produce a specific error message'
 ]
 norecursedirs = ['dist', 'build', 'cpp_backend_tests/build*', '_local/*', '.*']
+python_files = ['test_*.py', '*_test.py', 'benchmark_*.py']
+python_functions = ['test_*', 'benchmark_*']
 testpaths = 'tests'
 xfail_strict = true
 
