--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,7 @@ classifiers = [
   'Programming Language :: Python :: 3.11',
   'Programming Language :: Python :: 3.12',
   'Programming Language :: Python :: 3.13',
+  'Programming Language :: Python :: 3.14',
   'Programming Language :: Python :: Implementation :: CPython',
   'Topic :: Scientific/Engineering :: Atmospheric Science',
   'Topic :: Scientific/Engineering :: Mathematics',
@@ -128,7 +129,7 @@ license = 'BSD-3-Clause'
 license-files = ['LICENSE']
 name = 'gt4py'
 readme = 'README.md'
-requires-python = '>=3.10, <3.14'
+requires-python = '>=3.10, <3.15'
 
 [project.optional-dependencies]
 cartesian = ['gt4py[jax,standard,testing]']
