--- a/ci/cscs-ci.yml
+++ b/ci/cscs-ci.yml
@@ -127,7 +127,7 @@ build_cscs_amd_rocm:
     - export NOX_SESSION_ARGS="${VARIANT:+($VARIANT}${SUBVARIANT:+, $SUBVARIANT}${DETAIL:+, $DETAIL}${VARIANT:+)}"
     - cd "${WORKDIR}/gt4py" && uv run --script noxfile.py -s "test_${SUBPACKAGE}-${PY_VERSION}${NOX_SESSION_ARGS}"
 
-test_cscs_gh200:
+.test_cscs_gh200:
   extends:
     - .container-runner-santis-gh200
     - .test_common
@@ -157,7 +157,7 @@ test_cscs_amd_rocm:
   needs:
     - build_cscs_amd_rocm
   variables:
-    TEST_VARIANTS: 'cpu rocm6_0'
+    TEST_VARIANTS: 'rocm6_0'
     GT4PY_BUILD_JOBS: 8
     # Limit test parallelism to avoid "OSError: too many open files" in the gt4py build stage.
     PYTEST_XDIST_AUTO_NUM_WORKERS: 32
