--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,7 +87,7 @@ classifiers = [
 ]
 dependencies = [
   'attrs>=21.3',
-  'black>=24.10',
+  "black>=25.11",
   'boltons>=20.1',
   'cached-property>=1.5.1',
   'click>=8.0.0',
