--- a/pyproject.toml
+++ b/pyproject.toml
@@ -129,7 +129,7 @@ license = 'BSD-3-Clause'
 license-files = ['LICENSE']
 name = 'gt4py'
 readme = 'README.md'
-requires-python = '>=3.10, <3.15'
+requires-python = '>=3.10, <3.15, !=3.13.10, !=3.14.1'
 
 [project.optional-dependencies]
 cartesian = ['gt4py[jax,standard,testing]']
