--- a/pyproject.toml
+++ b/pyproject.toml
@@ -299,6 +299,7 @@ markers = [
   'uses_max_over: tests that use the max_over builtin',
   'uses_mesh_with_skip_values: tests that use a mesh with skip values',
   'uses_concat_where: tests that use the concat_where builtin',
+  'embedded_concat_where_infinite_domain: tests with concat_where resulting in an infinite domain',
   'uses_program_metrics: tests that require backend support for program metrics',
   'checks_specific_error: tests that rely on the backend to produce a specific error message'
 ]
