--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           enable-cache: true
           cache-dependency-glob: "uv.lock"
-          python-version: ${{ matrix.python-version }}
+          #python-version: ${{ matrix.python-version }}
 
       - name: Configure OpenMP for macos clang
         if: ${{ matrix.os == 'macos-latest' }}
