--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -68,7 +68,9 @@ jobs:
         env:
           UV_RESOLUTION: ${{ matrix.dependencies-strategy }}
           UV_PYTHON_PREFERENCE: only-managed
-        run: ./noxfile.py -s 'test_${{ matrix.gt4py-module }}-${{ matrix.python-version }}' -t 'cpu'
+        run: |
+          uv python upgrade ${{ matrix.python-version }}
+          ./noxfile.py -s 'test_${{ matrix.gt4py-module }}-${{ matrix.python-version }}' -t 'cpu'
 
       - name: Notify slack
         if: ${{ failure() && (github.event_name == 'schedule') }}
