--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -78,6 +78,7 @@ jobs:
           UV_PYTHON_PREFERENCE: only-managed
         run: |
           uv python upgrade ${{ matrix.python-version }}
+          uv pip install numpy
           otool -L $(python -c "import numpy; print(numpy.__file__)")
           ./noxfile.py -s 'test_${{ matrix.gt4py-module }}-${{ matrix.python-version }}' -t 'cpu'
 
