--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -81,7 +81,7 @@ jobs:
           uv venv
           uv pip install numpy
           source .venv/bin/activate
-          otool -L $(python -c "import numpy.core._multiarray_umath as m; print(m.__file__)")
+          find $(python -c "import numpy, os; print(os.path.dirname(numpy.__file__))") -name "*.so" -maxdepth 2
           deactivate
           ./noxfile.py -s 'test_${{ matrix.gt4py-module }}-${{ matrix.python-version }}' -t 'cpu'
 
