--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dace-cartesian = [
   'dace>=1.0.2,<2'  # refined in [tool.uv.sources]
 ]
 dace-next = [
-  'dace==2025.11.26'  # refined in [tool.uv.sources]
+  'dace==43!2026.01.12'  # refined in [tool.uv.sources]
 ]
 dev = [
   {include-group = 'build'},
@@ -458,7 +458,7 @@ url = 'https://test.pypi.org/simple'
 atlas4py = {index = "test.pypi"}
 dace = [
   {git = "https://github.com/GridTools/dace", branch = "romanc/stree-roundtrip", group = "dace-cartesian"},
-  {git = "https://github.com/GridTools/dace", tag = "__gt4py-next-integration_2025_12_11", group = "dace-next"}
+  {git = "https://github.com/GridTools/dace", tag = "__gt4py-next-integration_2026_01_12", group = "dace-next"}
 ]
 
 # -- versioningit --
