--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -56,7 +56,7 @@ jobs:
         # Note that the compiler flag 'CXXFLAGS=-Wno-missing-template-arg-list-after-template-kw'
         # is only needed in cartesian dace backend. For next, a proper fix has been merged
         # to dace main branch, see https://github.com/spcl/dace/pull/2084
-        # Set 'NUMEXPR_NUM_THREADS=1' in order to avoid error 'libc++abi: terminating due to uncaught exception
+        # Set 'OPENBLAS_NUM_THREADS=1' in order to avoid error 'libc++abi: terminating due to uncaught exception
         # of type std::runtime_error: thread_specific_storage constructor: could not initialize the TSS key!'
         run: |
           gcc --version
@@ -67,10 +67,7 @@ jobs:
           echo "CXXFLAGS=-Wno-missing-template-arg-list-after-template-kw" >> $GITHUB_ENV
           echo "OPENMP_CPPFLAGS=-Xclang -fopenmp -Xclang -I$(brew --prefix libomp)/include" >> $GITHUB_ENV
           echo "OPENMP_LDFLAGS=-Xclang -fopenmp $(brew --prefix libomp)/lib/libomp.dylib" >> $GITHUB_ENV
-          echo "OMP_NUM_THREADS=1" >> $GITHUB_ENV
-          echo "MKL_NUM_THREADS=1" >> $GITHUB_ENV
           echo "OPENBLAS_NUM_THREADS=1" >> $GITHUB_ENV
-          echo "NUMEXPR_NUM_THREADS=1" >> $GITHUB_ENV
 
       - name: Run CPU tests for '${{ matrix.gt4py-module }}' with '${{ matrix.dependencies-strategy }}' resolution strategy
         env:
@@ -78,11 +75,6 @@ jobs:
           UV_PYTHON_PREFERENCE: only-managed
         run: |
           uv python upgrade ${{ matrix.python-version }}
-          uv venv
-          uv pip install numpy
-          source .venv/bin/activate
-          find $(python -c "import numpy, os; print(os.path.dirname(numpy.__file__))") -name "*.so" -maxdepth 2
-          deactivate
           ./noxfile.py -s 'test_${{ matrix.gt4py-module }}-${{ matrix.python-version }}' -t 'cpu'
 
       - name: Notify slack
