--- a/pyproject.toml
+++ b/pyproject.toml
@@ -458,7 +458,7 @@ url = 'https://test.pypi.org/simple'
 atlas4py = {index = "test.pypi"}
 dace = [
   {git = "https://github.com/GridTools/dace", branch = "romanc/stree-roundtrip", group = "dace-cartesian"},
-  {git = "https://github.com/GridTools/dace", tag = "__gt4py-next-integration_2025_12_11", group = "dace-next"}
+  {git = "https://github.com/GridTools/dace", branch = "gt4py-next-integration-hip", group = "dace-next"}
 ]
 
 # -- versioningit --
