--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -39,6 +39,14 @@ jobs:
         gt4py-module: ["cartesian", "eve", "next", "storage"]
         os: ["ubuntu-latest", "macos-latest"]
         python-version: ${{ fromJSON(needs.get-python-versions.outputs.python-versions) }}
+        exclude:
+          # TODO(edopao): re-enable this test configuration once the following issue
+          # is solved: 'libc++abi: terminating due to uncaught exception of type
+          # std::runtime_error: thread_specific_storage constructor: could not initialize the TSS key!'
+          - dependencies-strategy: "highest"
+            gt4py-module: "cartesian"
+            os: macos-latest
+            python-version: ["3.12", "3.13", "3.14"]
       fail-fast: false
 
     runs-on: ${{ matrix.os }}
