--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -35,10 +35,17 @@ jobs:
         # dependencies-strategy -> The strategy that `uv lock` should use to select
         # between the different compatible versions for a given package requirement
         # [arg: --resolution, env: UV_RESOLUTION=]
-        dependencies-strategy: ["highest"]
-        gt4py-module: ["cartesian"]
-        os: ["macos-latest"]
+        dependencies-strategy: ["lowest-direct", "highest"]
+        gt4py-module: ["cartesian", "eve", "next", "storage"]
+        os: ["ubuntu-latest", "macos-latest"]
         python-version: ${{ fromJSON(needs.get-python-versions.outputs.python-versions) }}
+        exclude:
+          # FIXME[#2439](edopao): re-enable this test configuration once the following issue
+          # is solved: 'libc++abi: terminating due to uncaught exception of type
+          # std::runtime_error: thread_specific_storage constructor: could not initialize the TSS key!'
+          - dependencies-strategy: "highest"
+            gt4py-module: "cartesian"
+            os: "macos-latest"
       fail-fast: false
 
     runs-on: ${{ matrix.os }}
