--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,7 +106,7 @@ dependencies = [
   'ninja>=1.11',
   'numpy>=1.26.4',
   'packaging>=20.0',
-  'pybind11>=2.10.1',
+  'pybind11>=2.10.1,<3',  # cartesian: keeping <3 because of https://github.com/pybind/pybind11/issues/5975
   'setuptools>=77.0.3',
   'tabulate>=0.8.10',
   'toolz>=0.12.1',
